--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "postinstall": "prisma generate" ,
+    "postinstall": "prisma generate",
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/s3-request-presigner": "^3.787.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "1.2.2",
