--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "schema": "prisma/schema"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
     "postinstall": "prisma generate",
     "lint": "next lint"
   },
